
2011-04-20  Jihoon Kim

        * Ecore_IMF: Added support for auto-capitalization and prediction
        control API's

2011-05-03  Carsten Haitzler (The Rasterman)

        * Fixed null pointer dereference in selection notification
        handling in Ecore_X.

2011-05-12  Carsten Haitzler (The Rasterman)

        * Add a custom Ecore Animator source and tick ability to be able
        to plug in external animator tick sources like vblank interrupts
        and so on.

2011-05-14  Cedric Bail

	* Sync GNUTLS threads activation with Eina.

2011-05-14  Vincent Torri

	* Make ecore_con work on Windows (only the local connections
	need a port)
	* Make ecore_ipc compile on Windows

2011-05-17  Cedric Bail

	* Add ecore_timer_dump.

2011-05-19  Carsten Haitzler (The Rasterman)

        * Fix Ecore_X shadow tree search handling to respect shape and
        shape input of windows.

2011-05-20  Daniel Juyung Seo (SeoZ)

        * Ecore ecore_main.c: Fixed ecore_main_loop
        (_ecore_main_loop_iterate_internal). This fixes fd handler pending
        issue when ecore_idler callback adds ecore_job/event.
        * Ecore ecore_main.c: Refactoring _ecore_main_loop_iterate_internal().

2011-05-27  Gustavo Sverzut Barbieri (k-s)

	* Ecore_X: introduce ecore_x_screen_size_get()
	* Ecore_Evas: be safer when returning Ecore_Evas* from
	  ecore_evas_ecore_evas_get()
	* Ecore_Evas: introduce ecore_evas_screen_geometry_get()

2011-05-30  Cedric Bail

	* Add ecore_pipe_freeze/thaw to suspend and restart watching the pipe
	inside the main loop.

2011-06-09  Cedric Bail

	* Add ecore_pipe_wait (should only called from outside of the main loop).

2011-06-15  Mike Blumenkrantz

        * Add ecore_con_ssl_client/server_upgrade to begin asynchronously upgrading an
        existing connection to SSL/TLS, emitting ECORE_CON_CLIENT/SERVER_UPGRADE event
        upon completion.

2011-06-16  Cedric Bail

	* Fix ecore_x_selection_convert not taking selection length into account.